--- a/server/src/public/index.html
+++ b/server/src/public/index.html
@@ -6,6 +6,7 @@
 	  <title>Full Stack Test</title>
   </head>
   <body>
-    <h1> hello world </h1>
+    <h1> Full Stack Final Test</h1>
+    <main ui-view> </main>
   <script src="bundle.js"></script></body>
 </html>
