final test completed

--- a/app/src/stateProvider/imageTemplate.html
+++ b/app/src/stateProvider/imageTemplate.html
@@ -1,7 +1,7 @@
 <h3 class='center'> Images </h3>
 <div class='imageContainer'>
   <div class='imageListInfo' ng-repeat='image in images.all'>
-    <img class='image' src={{image.url}}> </img>
+    <img class='image' ng-src={{image.url}}> </img>
     <div>Caption: {{image.caption}} </div>
   </div>
 </div>
